--- a/Treinamento/Treinamento.csproj
+++ b/Treinamento/Treinamento.csproj
@@ -49,15 +49,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="1 - VIEW\ViewAgencia.cs" />
+    <Compile Include="1 - VIEW\ViewContaBancaria.cs" />
+    <Compile Include="1 - VIEW\ViewPessoa.cs" />
     <Compile Include="2 - MODEL\Agencia.cs" />
     <Compile Include="3 - DAO\AgenciaDao.cs" />
     <Compile Include="2 - MODEL\ContaBancaria.cs" />
     <Compile Include="3 - DAO\ContaBancariaDao.cs" />
     <Compile Include="2 - MODEL\Pessoa.cs" />
     <Compile Include="3 - DAO\PessoaDao.cs" />
-    <Compile Include="1 - INTERFACE\Program.cs" />
+    <Compile Include="1 - VIEW\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="4 - UTIL\ValidadorDePessoa.cs" />
+    <Compile Include="4 - UTIL\ValidadorDeDocumento.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
