--- a/Treinamento/Treinamento.csproj
+++ b/Treinamento/Treinamento.csproj
@@ -51,6 +51,7 @@
   <ItemGroup>
     <Compile Include="1 - VIEW\ViewAgencia.cs" />
     <Compile Include="1 - VIEW\ViewContaBancaria.cs" />
+    <Compile Include="1 - VIEW\ViewMenu.cs" />
     <Compile Include="1 - VIEW\ViewPessoa.cs" />
     <Compile Include="2 - MODEL\Agencia.cs" />
     <Compile Include="3 - DAO\AgenciaDao.cs" />
