--- a/Treinamento/Treinamento.csproj
+++ b/Treinamento/Treinamento.csproj
@@ -52,6 +52,7 @@
     <Compile Include="1 - VIEW\ViewAgencia.cs" />
     <Compile Include="1 - VIEW\ViewContaBancaria.cs" />
     <Compile Include="1 - VIEW\ViewDeposito.cs" />
+    <Compile Include="1 - VIEW\ViewFuncionario.cs" />
     <Compile Include="1 - VIEW\ViewMenu.cs" />
     <Compile Include="1 - VIEW\ViewPessoa.cs" />
     <Compile Include="1 - VIEW\ViewRelatorioOperacoes.cs" />
@@ -64,6 +65,7 @@
     <Compile Include="2 - MODEL\ContaBancaria.cs" />
     <Compile Include="3 - DAO\ContaBancariaDao.cs" />
     <Compile Include="2 - MODEL\Pessoa.cs" />
+    <Compile Include="3 - DAO\FuncionarioDao.cs" />
     <Compile Include="3 - DAO\PessoaDao.cs" />
     <Compile Include="1 - VIEW\Program.cs" />
     <Compile Include="3 - DAO\RelatorioOperacaoDao.cs" />
