--- a/Treinamento/Treinamento.csproj
+++ b/Treinamento/Treinamento.csproj
@@ -49,7 +49,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="1 - VIEW\BASE\DataBase.cs" />
+    <Compile Include="5 - BASE STARTER\DataBase.cs" />
     <Compile Include="1 - VIEW\VIEW MENU\ViewMenu.cs" />
     <Compile Include="1 - VIEW\VIEW MENU\ViewMenuAgencia.cs" />
     <Compile Include="1 - VIEW\VIEW MENU\ViewMenuConta.cs" />
