--- a/TreinamentoDominio/TreinamentoDominio.csproj
+++ b/TreinamentoDominio/TreinamentoDominio.csproj
@@ -50,6 +50,7 @@
     <Compile Include="ContaBancaria.cs" />
     <Compile Include="Funcionario.cs" />
     <Compile Include="Interfaces\IDao.cs" />
+    <Compile Include="Interfaces\IServices.cs" />
     <Compile Include="Operacao.cs" />
     <Compile Include="Pessoa.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
